--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "canvas-confetti": "^1.9.2",
+    "confetti": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
